tests/transpiler/x/hs/inner_join.hs
{-# LANGUAGE DuplicateRecordFields #-}
{-# LANGUAGE OverloadedRecordDot #-}
{-# LANGUAGE NoFieldSelectors #-}
import Prelude hiding (customerId, customerName, id, name, orderId, total)
-- Generated by Mochi transpiler v0.10.33 on 2025-07-21 18:46 GMT+7
data GenType1 = GenType1
  { id :: Int,
    name :: String
  } deriving (Show)


data GenType2 = GenType2
  { id :: Int,
    customerId :: Int,
    total :: Int
  } deriving (Show)


data GenType3 = GenType3
  { orderId :: String,
    customerName :: String,
    total :: String
  } deriving (Show)


customers = [GenType1 {id = 1, name = "Alice"}, GenType1 {id = 2, name = "Bob"}, GenType1 {id = 3, name = "Charlie"}]

orders = [GenType2 {id = 100, customerId = 1, total = 250}, GenType2 {id = 101, customerId = 2, total = 125}, GenType2 {id = 102, customerId = 1, total = 300}, GenType2 {id = 103, customerId = 4, total = 80}]

result = [GenType3 {orderId = o.id, customerName = c.name, total = o.total} | o <- orders, c <- customers, o.customerId == c.id]

main :: IO ()
main = do
    putStrLn "--- Orders with customer info ---"
    mapM_ (\entry -> do
        putStrLn "Order" ++ " " ++ show entry.orderId ++ " " ++ "by" ++ " " ++ show entry.customerName ++ " " ++ "- $" ++ " " ++ show entry.total
        ) result
